Bug 118120 - EDITING: Selecting the ALL button on the message box displayed when user starts DELETE of multiple items in Base Tables window goes to help file instead of deleting all items.
Summary: EDITING: Selecting the ALL button on the message box displayed when user star...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.1.0.0.beta1+
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-06-12 00:01 UTC by Drew Jensen
Modified: 2018-06-23 00:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example file with lots of views (212.96 KB, application/vnd.oasis.opendocument.database)
2018-06-12 00:02 UTC, Drew Jensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-06-12 00:01:01 UTC
Description:
When you select multiple items of a list of Tables and Views in the Base window and try to delete them all at once a message box asks if you want to delete the first one selected or 'ALL' of the items. Executing the ALL button should do just that - in 6.1 Beta 1 (and not in 6.0.4 or 5.4.7) it actually takes you to the help page about the ALL button. 

Steps to Reproduce:
1. open attached file
2. go to Tables section, answer later in the migration assistant message
3. select the first 6 items in the list of views and tables (actually 2 or more)
4. Enter DELETE key
5. A message box opens "Do you want to delete the table '1. Data Fields for Custom Reports'?" and displays three buttons, click on ALL

Actual Results:  
The local help page for Base is displayed.

Expected Results:
All the selected items should be deleted.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/66.0.3359.181 Chrome/66.0.3359.181 Safari/537.36
Comment 1 Drew Jensen 2018-06-12 00:02:41 UTC
Created attachment 142667 [details]
example file with lots of views
Comment 2 Julien Nabet 2018-06-19 19:59:27 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2018-06-19 20:50:09 UTC
On pc Debian x86-64 with LO Debian package 6.0.5.1, I don't reproduce this
=> regression
Comment 4 Xisco Faulí 2018-06-20 14:01:42 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-03-20 17:17:10 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-03-22 00:27:49 +0100
commit a084d003a927440fb56b11a0b7175360a1af41ab (patch)
tree 830911bfed2ad1f34730156d506bc9fd5c7c392c
parent 519293447189f75e842065f7ff211d395d0da4b6 (diff)
weld OSQLMessageBox

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 5 Caolán McNamara 2018-06-20 14:56:42 UTC
bah, dbaccess local RET_ALL is set to the same value as RET_HELP
Comment 6 Commit Notification 2018-06-20 18:25:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ec36da3788ffc7007dadc568d00f019c0ea831b4

Resolves: tdf#118120 RET_ALL shares same value as RET_HELP

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2018-06-20 19:57:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f2d2e3dc7ddccd490b6829310340942b710057e7&h=libreoffice-6-1

Resolves: tdf#118120 RET_ALL shares same value as RET_HELP

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Drew Jensen 2018-06-23 00:12:30 UTC
Verified using Ubuntu 18.04 and build:
Version: 6.2.0.0.alpha0+
Build ID: 5c64e8034bf30822cd9f713babff5c1d9db73a0c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-06-22_05:00:33
Locale: en-US (en_US.UTF-8); Calc: group threaded

and build 
Version: 6.1.0.0.beta2+
Build ID: 2acaf22274068fbc4181120084aa372254e11686
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-6-1, Time: 2018-06-21_02:23:27
Locale: en-US (en_US.UTF-8); Calc: group threaded

So close it.