Resolves: tdf#118120 RET_ALL shares same value as RET_HELP

Change-Id: I766c379171ac25eb9c1d8036e052fb8f2b4e1459